--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,18 @@
 *.zip
 *.tar.gz
 *.rar
+.DS_Store
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+/.idea/.gitignore
+/.idea/compiler.xml
+/.idea/encodings.xml
+/.idea/jarRepositories.xml
+/.idea/misc.xml
+/.idea/uiDesigner.xml
+/.idea/vcs.xml
+
+/target*
+/.idea/git_toolbox_prj.xml
